tests/baselines/reference/multipleClassPropertyModifiersErrors.errors.txt
tests/cases/compiler/multipleClassPropertyModifiersErrors.ts(4,16): error TS1005: ';' expected.


==== tests/cases/compiler/multipleClassPropertyModifiersErrors.ts (1 errors) ====
    class C {
    	public public p1;
    	private private p2;
    	static static p3;
    	              ~~
!!! error TS1005: ';' expected.
    	public private p4;
    	private public p5;
    	public static p6;
    	private static p7;
    }